tests/value/value.exp
Error: value.js:3
  3: var y:string = o["x"];
                    ^^^^^^ Cannot assign `o["x"]` to `y` because number [1] is incompatible with string [2].
  References:
    2: o["x"] = 4;
                ^ [1]: number
    3: var y:string = o["x"];
             ^^^^^^ [2]: string

Error: value.js:6
  6: table["x"] = "hello";
                  ^^^^^^^ string [1] is incompatible with number [2].
  References:
    6: table["x"] = "hello";
                    ^^^^^^^ [1]: string
    6: table["x"] = "hello";
       ^^^^^^^^^^ [2]: number


Found 2 errors
